# fishywatch

./: .gitignore  README.md  fetcher.py  main.py  page_parser.py  pyproject.toml  utils.py  worker.py
.github/workflows/: ci.yaml
core/: page_parser.py  parserfuncs.py
infra/: channel.py  exception.py  expire_set.py  model.py  task_scheduler.py  types.py
scraper/: __init__.py  config.py  fetcher.py  page_parser.py  parserfuncs.py  pg_saver.py  saver.py  utils.py
tests/: conftest.py  test_channel.py  test_expire_set.py
tests/infra/: channel.py
