[tool.poetry]
name = "fishywatch"
version = "0.1.0"
description = ""
authors = ["odysa <piensengxv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
