[tool.poetry]
name = "fishywatch"
version = "0.1.0"
description = ""
authors = ["odysa <piensengxv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
tldextract = "^5.0.1"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-sugar = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]